# DesktopAnima

./: CMakeLists.txt  Utils.cpp  main.cpp
app/: App.cpp  App.h  Scene.h  SceneManager.cpp  SceneManager.h
gl/: Quad.cpp  Quad.h  Shader.cpp  Shader.h
math/analytics/: Analytics.cpp  Analytics.h
math/api/: MathEngine.h
math/common/: Constants.h  Types.h  Utils.h  todo.h
math/dynamics/: Maps.cpp  Maps.h
math/executor/: PatternExecutor.h
math/fractal/: Fractal.cpp  Fractal.h
math/functions/: Functions.cpp  Functions.h
math/helpers/: Constants.h  Utils.h
math/pattern/: Functions.cpp  Functions.h  MathEngine.h  Pattern1D.cpp  Pattern1D.h  Pattern2D.cpp  Pattern2D.h  PatternExecutor.h  PatternIdentity.h  PatternInit.h  PatternList.h  PatternRegistry.h
math/signal/: Embedding.cpp  Embedding.h
math/special/: Special.h  special.cpp
math/statistics/: Statistics.cpp  Statistics.h
math/types/: Types.h
scenes/: FlowScene.cpp  FlowScene.h  GrayScottScene.cpp  NoiseScene.cpp  NoiseScene.h
shaders/: blit.frag  flow_space.frag  fullscreen.vert  noise.frag  noise_smooth_fall.frag
shaders/flow/: flow.frag  flow_besties  flow_color_change.frag  flow_colorful.frag
shaders/noise/: noise.frag  noise0.frag  noise1.frag  noise10.frag  noise13.frag  noise2.frag  noise3.frag  noise4.frag  noise5.frag  noise6.frag  noise7.frag  noise8.frag  noise_boiling_liquid.frag
tests/: testME.cpp  testMathEngine.cpp  testTypes.cpp
tests/Functions/: testAlgebra.cpp  testExpLog.cpp  testFractals.cpp  testGeneralNumerical.cpp  testHybrid.cpp  testIteration.cpp  testOutliers.cpp  testSpecial.cpp  testStatCharacter.cpp  testStatCorrelations.cpp  testStatDesc.cpp  testStatDistributions.cpp  testStatInfo.cpp  testStatQuantile.cpp  testStatRegression.cpp  testStatRobust.cpp  testStatSampling.cpp  testStatShape.cpp  testStatTests.cpp  testStatTimeSeries.cpp  testTrigonometric.cpp  textHyperbolic.cpp  uniTest.cpp
